[package]
name = "derive-error-chain"
version = "0.7.0"
license = "MIT/Apache-2.0"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Paul Colomiets <paul@colomiets.name>",
	"Colin Kiegel <kiegel@gmx.de>",
	"Yamakaky <yamakaky@yamaworld.fr>",
	"Arnav Singh <arnavion@gmail.com>"
]
description = "A Macros 1.1 implementation of error-chain"
documentation = "https://docs.rs/derive-error-chain"
repository = "https://github.com/Arnavion/derive-error-chain"

[dependencies]
quote = "0.3.x"
syn = "0.10.x"

[lib]
proc-macro = true
