[package]
name = "derive-error-chain"
version = "0.10.1"
license = "MIT/Apache-2.0"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Paul Colomiets <paul@colomiets.name>",
	"Colin Kiegel <kiegel@gmx.de>",
	"Yamakaky <yamakaky@yamaworld.fr>",
	"Arnav Singh <arnavion@gmail.com>"
]
description = "A Macros 1.1 implementation of error-chain"
documentation = "https://docs.rs/derive-error-chain"
repository = "https://github.com/Arnavion/derive-error-chain"

[dependencies]
quote = "^0.3.8"
syn = { version = "0.11.x", features = ["parsing", "full"] }

[lib]
proc-macro = true
