[package]
name = "derive-error-chain"
version = "0.11.2"
license = "MIT/Apache-2.0"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Paul Colomiets <paul@colomiets.name>",
	"Colin Kiegel <kiegel@gmx.de>",
	"Yamakaky <yamakaky@yamaworld.fr>",
	"Arnav Singh <arnavion@gmail.com>"
]
description = "A Macros 1.1 implementation of error-chain"
documentation = "https://docs.rs/derive-error-chain"
repository = "https://github.com/Arnavion/derive-error-chain"

[dependencies]
proc-macro2 = "0.4.x"
quote = "0.6.x"
syn = { version = "0.14.x", features = ["derive", "full", "printing"] }
syntex_fmt_macros = "0.5.x"

[dev-dependencies]
error-chain = "0.11.x"

[lib]
proc-macro = true
